--- a/src/templates/otpTemplate.html
+++ b/src/templates/otpTemplate.html
@@ -54,7 +54,7 @@
   <body>
     <div class="email-container">
       <div class="header">
-        <h1>Welcome to Pinscore, {{username}}!</h1>
+        <h1>Welcome to Pinscore, {{name}}!</h1>
       </div>
       <div class="content">
         <p>
