--- a/src/templates/forgotPasswordTemplate.html
+++ b/src/templates/forgotPasswordTemplate.html
@@ -54,7 +54,7 @@
   <body>
     <div class="email-container">
       <div class="header">
-        <h1>Forgot Your Password, {{username}}?</h1>
+        <h1>Forgot Your Password, {{name}}?</h1>
       </div>
       <div class="content">
         <p>
