--- a/src/templates/otpTemplate.html
+++ b/src/templates/otpTemplate.html
@@ -33,7 +33,7 @@
         "
       >
         <h1 style="font-size: 24px; margin: 0">
-          Welcome to Pinscore, {{name}}!
+          Welcome to Pinscore
         </h1>
       </div>
       <div style="padding: 20px; text-align: center">
